# milhouse

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  check.out
.claude/: settings.local.json
configs/: connections.json  constants.json  demo_finance.json  esco_consulta.json  novedades.json  novedades_cartera_propia.json  observaciones.json  parameters.json  rend_especie_ajuste.json  rend_especie_calculo.json  rend_especie_cc.json  rend_especie_informe.json  rend_trimestral.json  test.json  users.json  warehouse_carga.json
scripts/: download_crates.ps1  download_crates.sh  install_offline.sh  lib_ports.ps1  lib_ports.sh  run.ps1  run.sh  setup.ps1  setup.sh  setup_and_run.ps1  setup_and_run.sh  setup_apikey.ps1  setup_apikey.sh  start.ps1  start.sh  stop.ps1  stop.sh
src/: lib.rs  main.rs
src/ai/: mod.rs
src/api/: dto.rs  mod.rs  public.rs  routes.rs  ws.rs
src/config/: connections.rs  constants.rs  global_params.rs  mod.rs  schema.rs  users.rs
src/engine/: context.rs  dyn_dates.rs  export.rs  filter_subset.rs  introspect.rs  join.rs  lookup.rs  mod.rs  params.rs  procedural.rs  sort.rs  sql_exec.rs  sql_query.rs  transform.rs  union.rs
src/orchestrator/: dag.rs  mod.rs  progress.rs  scheduler.rs  state.rs
src/runs/: bundle.rs  mod.rs  worker.rs
src/scripting/: mod.rs  rhai_runner.rs  rust_registry.rs
web/: package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ApiExposurePanel.tsx  AppShell.tsx  BackendStatusBar.tsx  CaseDialogs.tsx  CasesPanel.tsx  ConnectionsPanel.tsx  ConstantsPanel.tsx  DagView.tsx  DesignCanvas.tsx  DesignEditor.tsx  DesignPanel.tsx  Dialog.tsx  EtaBadge.tsx  ExecParamsPanel.tsx  (+22 more)
(+25 files in other folders)
